vcluster_versioned_docs/version-0.34.0/deploy/control-plane/docker-container/basics.mdx
---
title: Deployment basics
sidebar_label: Basics
sidebar_position: 1
sidebar_class_name: standalone docker
---

import InterpolatedCodeBlock from '@site/src/components/InterpolatedCodeBlock';
import InstallCLIFragment from '../../../_partials/deploy/install-cli.mdx'
import DockerConfig from '../../../_partials/config/experimental/docker.mdx';
import DefaultK8sVersion from '../../../_fragments/default-k8s-version.mdx';

vCluster in Docker (vind) allows you to deploy a complete Kubernetes cluster using Docker containers without requiring a host Kubernetes cluster. This deployment method is ideal for local development, testing, and CI/CD scenarios.

## Overview

When deploying vCluster as Docker containers:

- **Control plane**: Runs as Docker containers (API server, etcd, controller manager, scheduler)
- **Worker nodes**: Simulated as additional Docker containers
- **Networking**: Uses Docker networking for inter-container communication
- **Storage**: Uses Docker volumes for persistent data
- **No control plane cluster required**: Complete independence from existing Kubernetes infrastructure

## Prerequisites

### System requirements

- **Docker**: Docker Desktop, Docker Engine or similar installed and running
- **Operating System**: Linux, macOS, or Windows with Docker support
- **Resources**: Minimum 2GB RAM and 2 CPU cores available to Docker
- **Network**: Docker daemon accessible and able to create networks

### Docker configuration

Ensure Docker is properly configured:

<InterpolatedCodeBlock
  code="docker --version
docker info"
  language="bash"
/>

For optimal performance, consider:
- Enabling [containerd image storage](https://docs.docker.com/engine/storage/containerd/) for better registry proxy performance
- Allocating sufficient resources in Docker Desktop preferences

## Deploy vCluster

### Step 1: Install vCluster CLI

<InstallCLIFragment/>

### Step 2: Configure Docker Driver

Set vCluster to use the Docker driver:

<InterpolatedCodeBlock
  code="vcluster use driver docker"
  language="bash"
/>

:::note Air-gapped environments
If your Docker containers cannot reach public registries or GitHub, follow the [air-gapped setup](./air-gapped.mdx) guide to prepare your host and configure your `vcluster.yaml` before proceeding.
:::

### Step 3: Create vCluster configuration (optional)

Create a `vcluster.yaml` file to customize your Docker deployment:

<InterpolatedCodeBlock
  code={`experimental:
    docker:
      # Expose additional ports
      ports:
      - "8080:80"
      - "8443:443"
    
      # Mount host directories
      volumes:
      - "/host/data:/data"
      - "/var/run/docker.sock:/var/run/docker.sock"
    
      # Set environment variables
      env:
      - "DEBUG=true"
      - "LOG_LEVEL=info"
    
      # Add additional worker nodes
      nodes:
      - name: "worker-1"
        ports:
          - "9090:9090"
      - name: "worker-2"
        volumes:
          - "/host/logs:/logs"
    
      # Configure registry proxy (enabled by default)
      registryProxy:
        enabled: true
    
      # Configure load balancer (enabled by default)
      loadBalancer:
        enabled: true
        forwardPorts: true`}
  language="yaml"
/>

### Step 4: Deploy the vCluster

Deploy with default configuration:

<InterpolatedCodeBlock
  code="vcluster create [[VAR:VCLUSTER_NAME:my-vcluster]]"
  language="bash"
/>

<DefaultK8sVersion/>

Or deploy with custom configuration:

<InterpolatedCodeBlock
  code="vcluster create [[VAR:VCLUSTER_NAME:my-vcluster]] --values vcluster.yaml"
  language="bash"
/>

### Step 5: Verify Deployment

Check that your vCluster is running:

<InterpolatedCodeBlock
  code="kubectl get nodes
kubectl get namespaces"
  language="bash"
/>

Verify Docker containers:

<InterpolatedCodeBlock
  code="docker ps --filter name=[[VAR:VCLUSTER_NAME:my-vcluster]]"
  language="bash"
/>

## Configuration options

### Container customization

- **Image**: Specify custom container images for control plane and worker nodes
- **Ports**: Expose additional ports from containers to the host
- **Volumes**: Mount host directories or Docker volumes
- **Environment Variables**: Set custom environment variables
- **Docker Arguments**: Pass additional arguments to Docker run commands

### Multi-node setup

Configure multiple worker nodes with individual settings:

<InterpolatedCodeBlock
  code={`experimental:
    docker:
      nodes:
      - name: "worker-1"
        image: "custom-registry/worker:latest"
        ports:
          - "3000:3000"
        volumes:
          - "/host/app:/app"
      - name: "worker-2"
        env:
          - "NODE_ENV=production"
        args:
          - "--privileged"`}
  language="yaml"
/>

### vCluster VPN

You can join external nodes to your Docker-based vCluster using the vCluster VPN feature. This requires vCluster Platform to be installed. For detailed setup instructions, see the [vCluster VPN documentation](../../../configure/vcluster-yaml/private-nodes/vpn.mdx).

<InterpolatedCodeBlock
  code={`experimental:
    docker:
      nodes:
      - name: my-node
  privateNodes:
    vpn:
      enabled: true
      nodeToNode:
        enabled: true`}
  language="yaml"
/>

## Troubleshoot

### Common issues

1. **Docker daemon not accessible**:
   <InterpolatedCodeBlock
     code="docker info"
     language="bash"
   />

2. **Resource constraints**:
   Ensure Docker has sufficient CPU and memory allocated

3. **Permission issues on macOS**:
   Load balancer features may require running Docker with elevated privileges. Try running your terminal as an administrator or ensure Docker Desktop has the necessary permissions in System Preferences > Security & Privacy

### Debug

<InterpolatedCodeBlock
  code={`# Check vCluster status
vcluster list

# Show all docker containers
docker ps -a

# View control plane logs
docker exec -it vcluster.cp.[[VAR:VCLUSTER_NAME:my-vcluster]] journalctl -u vcluster --no-pager

# View kubelet logs
docker exec -it vcluster.node.[[VAR:VCLUSTER_NAME:my-vcluster]].my-node journalctl -u kubelet --no-pager

# View containerd logs
docker exec -it vcluster.node.[[VAR:VCLUSTER_NAME:my-vcluster]].my-node journalctl -u containerd --no-pager

# View vcluster-vpn logs
docker exec -it vcluster.node.[[VAR:VCLUSTER_NAME:my-vcluster]].my-node journalctl -u vcluster-vpn --no-pager

`}
  language="bash"
/>

## Delete a Docker vCluster

To remove a Docker-based vCluster and clean up all associated resources:

<InterpolatedCodeBlock
  code="vcluster delete [[VAR:VCLUSTER_NAME:my-vcluster]]"
  language="bash"
/>

This command removes all Docker containers and networks created for the vCluster. Any data stored in Docker volumes is also deleted.

## Next steps

- [Configure Docker-specific settings](../../../configure/vcluster-yaml/experimental/docker.mdx)
- [Worker node options](../../../introduction/architecture.mdx#worker-nodes)
- [Explore vCluster features](../../../quick-start/docker.mdx)

## Config reference

<DockerConfig/>
